@@ -1173,73 +1173,190 @@ elseif cont == "BG" then
 elseif cont == "I_EK" then
   return {
     ["Blackrock Depths"] = {
-      ["Blackrock Depths"] = ".go 459.455994 27.085884 -70.655228 230",
+      ["Detention Block"] = ".go 459.455994 27.085884 -70.655228 230",
+	  ["Chamber of Enchantment"] = ".go 968.799438 -197.756500 -61.789276 230",
+	  ["Dark Iron Highway"] = ".go 623.448425 17.558680 -73.391113 230",
+	  ["East Garrison"] = ".go 585.529419 -89.719139 -45.453579 230",
+	  ["Hall of Crafting"] = ".go 898.281372 -372.272064 -49.936054 230",
+	  ["Ring of the Law"] = ".go 596.208252 -187.493927 -54.136932 230",
+	  ["Shrine of Thaurissan"] = ".go 562.839661 -288.675629 -43.102791 230",
+	  ["The Domicile"] = ".go 772.899109 -275.550201 -42.902870 230",
+	  ["The Black Vault"] = ".go 838.266052 -324.583649 -50.663799 230",
+	  ["West Garrison"] = ".go 762.066406 -63.591316 -46.233654 230",
+	  ["The Manufactory"] = ".go 743.927612 22.349787 -53.851517 230",
+	  ["The Grim Guzzler"] = ".go 849.493591 -139.070053 -50.602444 230",
+	  ["Mold Foundry"] = ".go 1169.542480 -132.244629 -74.366966 230",
+	  ["Summoners' Tomb"] = ".go 1264.560303 -266.022430 -78.219551 230",
+	  ["The Lyceum"] = ".go 1303.503906 -334.973297 -92.052856 230",
+	  ["The Iron Hall"] = ".go 1381.537720 -618.550598 -92.054359 230",
+	  ["The Imperial Seat"] = ".go 1381.260986 -733.223633 -92.723198 230",
 	},
 	["Blackrock Spire - Upper"] = {
-	  ["Blackrock Spire - Upper"] = ".go 79.99 -233.34 52.02 229",
+	  ["Blackrock Stadium"] = ".go 157.490051 -394.872040 121.975304 229",
+	  ["Hall of Blackhand"] = ".go 79.99 -233.34 52.02 229",
+	  ["The Furnace"] = ".go 47.091755 -472.946045 110.926056 229",
+	  ["Spire Throne"] = ".go -12.130870 -287.138702 110.942734 229",
+	  ["Dragonspire Hall"] = ".go 133.557816 -319.450714 70.956322 229",
+	  ["Hall of Binding - Entrance"] = ".go 144.975266 -285.498993 91.547417 229",
+	  ["The Rookery"] = ".go 106.582748 -288.413330 91.507515 229",
 	},
+	["Blackrock Spire - Lower"] = {
+	  ["Chamber Of battle"] = ".go -57.351669 -449.260925 77.776970 229",
+	  ["Halycon's Lair"] = ".go -183.421249 -324.788177 64.424034 229",
+	  ["Hordemar City - Entrance"] = ".go 39.616383 -379.592957 48.653355 229",
+	  ["Hordemar City - Lower"] = ".go -70.334282 -414.032196 -18.934982 229",
+	  ["Mok'Doom"] = ".go -37.598763 -334.959137 42.048180 229",
+	  ["Skitterweb Tunnels"] = ".go -111.293617 -508.848389 -15.265403 229",
+	  ["The Storehouse"] = ".go -187.924026 -476.665253 87.390289 229",
+	  ["Tazz'Alaor"] = ".go -39.441162 -490.066711 16.231623 229",
+	  },
 	["Blackwing Lair"] = {
-      ["Blackwing Lair"] = ".go -7653.554688 -1093.969116 404.183105 469",
+      ["Dragonmaw Garrison"] = ".go -7636.065430 -1080.993042 408.490936 469",
+	  ["Shadow Wing Lair"] = ".go -7512.544434 -976.792053 408.566925 469",
+	  ["Halls of Strife"] = ".go -7566.933594 -961.885986 428.033966 469",
+	  ["Blackwing Lair"] = ".go -7483.625488 -963.885620 449.818634 469",
+	  ["Nefarians Lair"] = ".go -7581.738281 -1256.289917 479.865784 469",
 	 },
 	["The Deadmines"] = {
       ["The Deadmines"] = ".go -16.40 -383.07 61.78 36",
+	  ["Mast Room"] = ".go -278.519440 -485.280121 48.865414 36",
+	  ["Goblin Foundry"] = ".go -215.229431 -550.649109 51.229431 36",
+	  ["Iceclad Cove"] = ".go -98.204262 -717.068115 8.622468 36",
+	  ["Boat - Edwin VanCleef"] = ".go -61.010639 -819.934814 41.475330 36",
 	},
 	  ["Gnomeregan"] = {
-	  ["Gnomeregan"] = ".go -337.437408 -0.258742 -152.845917 90",
-      ["Gnomeregan Train Depot"] = ".go -4858.270020 756.434875 244.922714 0",
+	  ["The Clockwerk Run"] = ".go -337.437408 -0.258742 -152.845917 90",
+      ["Gnomeregan Train Depot"] = ".go -4939.935059 725.738220 261.645874 0",
+	  ["Launch Bay"] = ".go -545.086670 499.745819 -216.809830 90",
+	  ["The Hall of Gears"] = ".go -467.044952 36.663555 -154.742157 90",
+	  ["The Hall of Gears - Bottom"] = ".go -460.767944 107.333275 -209.062546 90",
+	  ["The Clean Zone"] = ".go -536.271179 193.694000 -193.721039 90",
+	  ["The Dormitory"] = ".go -631.370667 119.517288 -183.880234 90",
 	},
 	["Karazhan"] = {
-	  ["Karazhan"] = ".go -11109.36 -2002.97 49.9 532",
-	  ["Karazhan Netherspace Tower"] = ".go -10844.8 -2271.81 424.578 532",
+	  ["The Gatehouse"] = ".go -11109.36 -2002.97 49.9 532",
+	  ["Livery Stables"] = ".go -11117.089844 -1923.192749 49.422874 532",
+	  ["Karazhan Netherspace Tower"] = ".go -11084.587891 -1982.207520 49.598476 532",
+	  ["The Scullery"] = ".go -11078.984375 -1952.160400 77.263649 532",
+	  ["The Banquet Hall"] = ".go -10985.784180 -1908.843750 78.868912 532",
+	  ["The Grand Ballroom"] = ".go -10976.721680 -2029.783447 79.972557 532",
+	  ["The Opera Hall"] = ".go -10901.235352 -1845.486084 93.532402 532",
+	  ["The Celestial Watch"] = ".go -11129.818359 -1631.954102 278.794128 532",
+	  ["Guardian's Library"] = ".go -11213.417969 -1809.272827 136.024307 532",
+	  ["The Menagerie"] = ".go -11008.732422 -1894.786499 165.759979 532",
+	  ["The Broken Stair"] = ".go -11071.226563 -1994.005005 97.224854 532",
+	  ["The Guest Chambers"] = ".go -10897.775391 -2035.412109 92.173195 532",
+	  ["Servents' Quarters"] = ".go -10925.089844 -1963.451660 49.475861 532",
     },
 	["Magisters' Terrace"] = {
+	  ["Grand Magister's Asylum"] = ".go 148.814789 161.307938 -16.727448 585",
+	  ["Halls of Theory - North"] = ".go 231.915115 -96.922508 -6.017302 585",
+	  ["Halls of Theory - East"] = ".go 205.017151 -214.389160 -9.472178 585",
+	  ["Observation Grounds"] = ".go 101.575401 -0.075466 -2.643079 585",
+	  ["Observation Grounds - Lower"] = ".go 126.811050 -50.050354 -21.658789 585",
 	  ["Magisters' Terrace - Outside"] = ".go 12885.49 -7311.92 65.52 530",
+	  ["Magisters' Terrace - Lower"] = ".go 126.271599 -168.441833 -21.755774 585",
+	  ["The Assembly Chamber"] = ".go 214.528946 0.211139 -2.830571 585",
+	  ["The Solar Vigil"] = ".go 230.576569 -270.256165 -7.861779 585",
     },
 	["Molten Core"] = {
       ["The Molten Core"] = ".go 1071.902954 -488.489014 -108.219124 409",
+	  ["Magmadar Cavern"] = ".go 969.891541 -959.155273 -180.869354 409",
+	  ["Ragnaros' Lair"] = ".go 734.005676 -753.905579 -215.525406 409",
 	},
   	["Naxxramas"] = {
 	  ["Naxxramas"] = ".go 3005.870 -3435.010 293.882 533",
       ["Naxxramas - Sapphiron's Lair"] = ".go 3498.270 -5349.450 144.968 533",
+	  ["Kel'Thuzad Chamber"] = ".go 3686.524414 -5100.779297 142.030823 533",
 	},
 	["Scholomance"] = {
-	  ["Scholomance"] = ".go 199.427017 126.463890 134.911682 289",
+	  ["The Reliquary"] = ".go 201.862167 48.702526 128.775009 289",
+	  ["Chamber of Summoning"] = ".go 260.454224 78.595993 109.971947 289",
+	  ["The Great Ossuary"] = ".go 108.740730 161.759262 109.494865 289",
+	  ["The Viewing Room"] = ".go 123.109169 86.791161 100.989197 289",
+	  ["The Laboratory"] = ".go 7.195116 142.510056 83.900688 289",
 	},
 	["Shadowfang Keep"] = {
 	  ["Shadowfang Keep"] = ".go -228.19 2110.56 76.89 33",
 	},
 	["Scarlet Monastery Armory"] = {
-	  ["Scarlet Monastery Armory"] = ".go 1608.380005 -320.500000 18.670000 189",
+	  ["Training Ground"] = ".go 1641.646606 -336.498993 18.677885 189",
+	  ["Footman's Armory"] = ".go 1751.315430 -365.912384 8.003935 189",
+	  ["Crusader's Armory"] = ".go 1851.502930 -416.976227 18.678148 189",
+	  ["Hall Of Champions"] = ".go 1942.437378 -431.037964 17.094526 189",
 	},
 	["Scarlet Monastery Cathedral"] = {
-      ["Scarlet Monastery Cathedral"] = ".go 855.109985 1320.760010 18.670000 189",
+      ["Scarlet Monastery"] = ".go 855.109985 1320.760010 18.670000 189",
+	  ["Chapel Gardens"] = ".go 892.890564 1399.458374 18.676405 189",
+	  ["Crusader's Chapel"] = ".go 1081.216431 1398.695801 30.302681 189",
 	},
 	["Scarlet Monastery Graveyard"] = {
-      ["Scarlet Monastery Graveyard"] = ".go 1688.57 1052.42 18.68 189",
+      ["Scarlet Monastery"] = ".go 1688.57 1052.42 18.68 189",
+	  ["Chamber of Atonement"] = ".go 1760.069092 1119.757202 7.490510 189",
+	  ["Forlorn Cloister"] = ".go 1797.287354 1227.110840 18.213457 189",
+	  ["Honor's Tomb"] = ".go 1798.532837 1418.538818 14.141210 189", 
 	},
 	["Scarlet Monastery Library"] = {
-      ["Scarlet Monastery Library"] = ".go 254.989990 -206.820007 18.677361 189",
+      ["Scarlet Monastery"] = ".go 254.989990 -206.820007 18.677361 189",
+	  ["Huntsman's Cloister"] = ".go 203.528580 -241.943497 19.201101 189",
+	  ["Gallery of Treasures"] = ".go 219.396210 -325.673615 18.534691 189",
+	  ["Athenaeum"] = ".go 269.394928 -428.873535 18.534241 189",
 	},
 	["The Stockade"] = {
 	  ["Stormwind Stockade"] = ".go 49.821239 0.870144 -16.713627 34",
 	},
 	["Stratholme"] = {
-	  ["Stratholme"] = ".go 3593.15 -3646.56 138.50 329",
+	  ["Crusaders' Square"] = ".go 3673.947510 -3202.037598 126.441231 329",
+	  ["Elders' Square"] = ".go 3657.463379 -3593.738037 137.062454 329",
+	  ["Festival Lane"] = ".go 3659.453125 -3521.981445 137.684006 329",
+	  ["King's Square"] = ".go 3442.708008 -3380.408203 140.833084 329",
+      ["Market Row"] = ".go 3701.277344 -3401.604492 132.049133 329";
+	  ["The Gauntlet"] = ".go 3802.194824 -3619.325684 145.202225 329",
+	  ["Slaughter Square"] = ".go 4024.348633 -3457.243896 121.170273 329",
+	  ["The Slaughter House"] = ".go 4032.624023 -3371.462646 115.063377 329",
+	  ["The Scarlet Bastion"] = ".go 3635.777588 -3108.921875 134.116409 329",
+	  ["The Crimson Throne"] = ".go 3430.162109 -3066.007568 136.506607 329",
+	  ["The Hoard"] = ".go 3430.162109 -3066.007568 136.506607 329",
     },
 	["Temple of Atal'Hakkar"] = {
 	  ["Temple of Atal'Hakkar"] = ".go -314.229004 99.879997 -131.848694 109",
+	  ["The Pit of Refuse"] = ".go -457.822174 125.417801 -189.729645 109",
+	  ["The Pit of Sacrifice"] = ".go -453.403809 118.184479 -92.850876 109",
+	  ["Chamber of the Dreamer"] = ".go -659.930969 4.211136 -90.835716 109",
+	  ["Sanctum of the Fallen God"] = ".go -436.104218 273.996857 -90.828064 109",
+	  ["Lair of the Chosen"] = ".go -496.400299 -82.911049 -90.828064 109",
+	  ["Hall of the Cursed"] = ".go -566.450867 88.616463 -53.945313 109",
 	},
 	["Sunwell Plateau"] = {
 	  ["Sunwell Plateau - Outside"] = ".go 12593.9 -6776.8 14.64 530",
+	  ["Parhelion Plaza"] = ".go 1786.912720 883.079163 15.077118 580",
+	  ["Apex Point"] = ".go 1704.043579 962.527771 53.076660 580",
+	  ["Den of Iniquity"] = ".go 1591.020874 624.555054 50.711815 580",
+	  ["The Dead Scar"] = ".go 1510.042236 614.535522 28.652412 580",
 	},
 	["Uldaman"] = {
-	  ["Uldaman"] = ".go -228.192993 46.160198 -46.018631 70",
+	  ["Hall of the Keepers"] = ".go -229.561371 61.192848 -46.037064 70",
+	  ["Map Chamber"] = ".go -228.014587 212.979370 -50.162994 70",
+	  ["Echomok Cavern"] = ".go -173.227646 390.383026 -36.432030 70",
+	  ["Dig Three"] = ".go 3.109766 406.711578 -47.306095 70",
+	  ["The Stone Vault"] = ".go 70.173286 388.474915 -38.274994 70",
+	  ["Hall of the Crafters"] = ".go 15.780107 227.084763 -31.868837 70",
+	  ["Khaz'goroth's Seat"] = ".go 77.115509 259.732605 -52.204609 70",
 	},
 	["Zul'Aman"] = {
 	  ["Zul'Aman"] = ".go 120 1772 43.441681 568",
 	},
 	["Zul'Gurub"] = {
 	  ["Zul'Gurub"] = ".go -11916.095703 -1239.402832 92.287262 309",
+	  ["Alter of Hir'eel"] = ".go -12111.109375 -1472.197510 130.599655 309",
+	  ["The Coil"] = ".go -11990.223633 -1686.539429 32.283134 309",
+	  ["Zanza'a Rise"] = ".go -12013.225586 -1752.726440 55.038300 309",
+	  ["Edge of Madness"] = ".go -11886.870117 -1846.763916 63.038353 309",
+	  ["Hakkari Grounds"] = ".go -12243.096680 -1820.342529 130.130112 309",
+	  ["Naze of Shirvallah"] = ".go -11744.999023 -1849.469360 40.323971 309",
+	  ["Temple of Bethekk"] = ".go -11598.696289 -1622.236816 44.848312 309",
+	  ["The Bloodfire Pit"] = ".go -11609.560547 -1344.923828 77.571877 309",
+	  ["Alter of the Blood God"] = ".go -11789.904297 -1693.459961 52.892750 309",
 	},
   }
 elseif cont == "I_K" then
@@ -1261,18 +1378,38 @@ elseif cont == "I_K" then
     },
     ["Blackfathom Deeps"] = {
 	  ["Blackfathom Deeps"] = ".go -152.983551 106.329994 -40.095310 48",
+	  ["The Drowned Sacellum"] = ".go -310.729156 46.974396 -53.126934 48",
+	  ["The Pool of Ask'ar"] = ".go -420.495422 183.196762 -53.864594 48",
+	  ["Moonshrine Ruins"] = ".go -741.270508 5.244606 -29.992249 48",
+	  ["Moonshrine Sanctum"] = ".go -819.237183 -116.485313 -24.585432 48",
+	  ["Aku'mai's Lair"] = ".go -853.519348 -251.916595 -25.302929 48",
 	  },
     ["Dire Maul East"] = {
-	  ["Dire Maul East"] = ".go 47.629997 -155.270004 -2.714379 429",
+	  ["Warpwood Quarter"] = ".go 47.629997 -155.270004 -2.714379 429",
+	  ["The Hidden Reach"] = ".go 115.234436 -445.703644 -3.273567 429",
+	  ["The Conservatory"] = ".go -144.276169 -265.273376 -51.886448 429",
+	  ["The Shrine of Eldretharr"] = ".go 265.765106 -373.426331 -67.525879 429",
 	  },
     ["Dire Maul North"] = {
-      ["Dire Maul North"] = ".go 254.588248 -24.739523 -2.560616 429",
+      ["Dire Maul"] = ".go 254.588248 -24.739523 -2.560616 429",
+	  ["Halls of Destruction"] = ".go 385.214294 394.191772 -1.676654 429",
+	  ["Gordok's Seat"] = ".go 655.777039 482.164948 29.455847 429",
 	  },
     ["Dire Maul West"] = {
-      ["Dire Maul West"] = ".go 34.35 160.70 -3.47 429",
+      ["Capital Gardens"] = ".go 43.295193 163.827759 -3.471444 429",
+	  ["Court of the Highborne"] = ".go 15.851978 415.815186 -3.604915 429",
+	  ["Prison of Immol'thar"] = ".go -40.870972 636.875061 -24.672842 429",
+	  ["The Athenaeum"] = ".go 111.859436 622.213745 -27.365036 429",
 	  },
 	["Maraudon"] = {
-	  ["Maraudon"] = ".go 1019.69 -458.31 -43.43 349",
+	  ["Foulspore Cavern"] = ".go 1019.69 -458.31 -43.43 349",
+	  ["The Noxious Hollow"] = ".go 1075.133057 -289.181488 -72.561104 349",
+	  ["Poison Falls"] = ".go 902.345581 -140.313263 -60.464558 349",
+	  ["The Wicked Grotto"] = ".go 650.815063 -329.265198 -52.019318 349",
+	  ["Vyletongue Seat"] = ".go 697.697266 -216.637924 -47.269821 349",
+	  ["Earth Song Falls"] = ".go 481.157288 19.401211 -96.312660 349",
+	  ["Zaetar's Grave"] = ".go 70.457405 -185.461136 -169.950348 349",
+	  
 	  },
     ["Onyxia's Lair"] = {
 	  ["Onyxia's Lair"] = ".go 29.454847 -68.960884 -6.984023 249",
@@ -1280,18 +1417,37 @@ elseif cont == "I_K" then
     ["Ragefire Chasm"] = {
       ["Ragefire Chasm"] = ".go 1.784903 -14.368461 -17.553291 389",
 	},
-    ["Razorfen Downs "] = {
+    ["Razorfen Downs"] = {
+	  ["The Bone Pile"] = ".go 2491.897705 702.816711 54.212948 129",
+	  ["The Callers' Chamber"] = ".go 2548.479492 891.515808 47.733932 129",
+	  ["The Murder Pens"] = ".go 2500.183838 778.190430 39.495525 129",
 	  ["Razorfen Downs "] = ".go 2591.989502 1101.246460 51.859333 129",
+	  ["Spiral of Thorns - Bottom"] = ".go 2442.368896 798.399963 42.449970 29",
+	  ["Spiral of Thorns - Top"] = ".go 2393.946777 971.589294 55.633945 129",
 	  },
 	["Razorfen Kraul"] = {
 	  ["Razorfen Kraul"] = ".go 1941.789551 1543.693604 81.661453 47",
 	  },
-	["Ahn'Qiraj"] = {
-	  ["Temple of Ahn'Qiraj"] = ".go -8231.330078 2010.599976 129.330505 531",
+	["Temple of Ahn'Qiraj"] = {
+	  ["Ahn'Qiraj"] = ".go -8231.330078 2010.599976 129.330505 531",
+	  },
+	["The Ruins of Ahn'Qiraj"] = {  
 	  ["The Ruins of Ahn'Qiraj"] = ".go -8429.743164 1512.136475 31.907234 509",
+	  ["Scarab Terrace"] = ".go -8574.210938 1324.379883 34.877548 509",
+	  ["General's Terrace"] = ".go -8955.469727 1548.742065 23.161253 509",
+	  ["The Reservoir"] = ".go -9005.251953 1760.760986 22.106636 509",
+	  ["Watchers' Terrace"] = ".go -9266.854492 1988.819214 85.875046 509",
+	  ["The Comb"] = ".go -9588.266602 1656.711426 21.764261 509",
+	  ["The Hatchery"] = ".go -9235.773438 1382.255859 21.386616 509",
 	  },
 	["Wailing Caverns"] = {
 	  ["Wailing Caverns"] = ".go -160.004120 131.63653 -74.079254 43",
+	  ["Screaming Gully"] = ".go -32.620827 214.374252 -95.985558 43",
+	  ["Dreamer's Rock"] = ".go 81.477676 212.941238 -93.031883 43",
+	  ["Pit of Fangs"] = ".go -69.256973 374.334686 -105.181374 43",
+	  ["Crag of the Everliving"] = ".go -151.442749 22.508011 -105.665855 43",
+	  ["Winding Chasm"] = ".go -137.102386 -102.701347 -70.080887 43",
+	  
 	  },
 	  ["Zul'Farrak"] = {
 	  ["Zul'Farrak"] = ".go 1221.820557 840.745728 8.976474 209",
@@ -1328,7 +1484,7 @@ elseif cont == "J" then
     ["Jails"] = {
       ["Alliance"] = ".go -98.0155 149.8360 -40.3827 35",
       ["Horde"] = ".go -11139.1845 -1742.4421 -29.7365 0",
-      ["Official"] = ".go 16228.5 16402.7 -64.377914 1",
+      ["Official"] = ".go 16228.241211 16403.197266 -63.896812 1",
     },
 
   }
